bita section qismi responsiv bilan

--- a/index.html
+++ b/index.html
@@ -39,5 +39,62 @@ Contract
      
     </div>
   </header>
+  <main>
+    <section class="fastfood">
+<div class="container">
+  <div class="fastfood__list">
+   <div>
+    <h1 class="fastfood__title">
+      super fast Food <br> 
+      delivery service
+    </h1>
+    <p class="fastfood__text">
+      We provide super fast-delivery service. Let's use our <br> services right now and get discounts of up to 50%
+    </p>
+    <button class="fastfood__btn">
+      Explore Food
+    </button>
+    <a class="fastfood__link" href="#">Download App</a>
+   </div>
+    <div class="fastfood__img">
+      <img src="./img/Mask Group (10).png" alt="">
+    </div>
+  </div>
+ 
+</div>
+    </section>
+    <!-- <section class="our">
+      <div class="container">
+        <div class="our__title">
+          <h2 >
+            Our popular Category 
+          </h2>
+        </div>
+        <ul class="our__list">
+          <li class="our__item2">
+            <img src="./img/burger 1.png" alt="">
+            Burger
+          </li>
+          <li class="our__item">
+            <img src="./img/sandwich 1.png" alt="">
+            sandwich
+          </li>
+          <li class="our__item">
+            <img src="./img/sandwich 1 (1).png" alt="">
+            Asian Food
+          </li>
+          <li class="our__item">
+            <img src="./img/sandwich 1.png" alt="">
+            sandwich
+          </li>
+          <li class="our__item">
+              <img src="./img/dish 1.png" alt="">
+            Set Menu
+          </li>
+
+        </ul>
+      </div>
+    </section> -->
+  </main>
 </body>
 </html>
