ikkinchi section qismi boldi responsiv bilan

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Contract
  
 </div>
     </section>
-    <!-- <section class="our">
+    <section class="our">
       <div class="container">
         <div class="our__title">
           <h2 >
@@ -94,7 +94,7 @@ Contract
 
         </ul>
       </div>
-    </section> -->
+    </section>
   </main>
 </body>
 </html>
