uchinchi section qismi responsiv bilan

--- a/index.html
+++ b/index.html
@@ -1,73 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
   <title>Document</title>
 </head>
+
 <body>
   <header class="food">
     <div class="container">
       <ul class="food__list">
         <img class="food__img" src="./img/EFood.svg" alt="">
         <li class="food__item">
-Home
+          Home
         </li>
         <li class="food__item">
-Service
+          Service
         </li>
         <li class="food__item">
-Top cities
+          Top cities
         </li>
         <li class="food__item">
-Contract
+          Contract
         </li>
-      <li class="food__item">
-        <img src="./img/Buy.png" alt="">
-      </li>
-       <li class="food__item">
-       
-        <button class="food__btn">
-          Sign Up
-      </button>
-       </li>
-       <button class="food_btn1">
+        <li class="food__item">
+          <img src="./img/Buy.png" alt="">
+        </li>
+        <li class="food__item">
 
-       </button>
+          <button class="food__btn">
+            Sign Up
+          </button>
+        </li>
+        <button class="food_btn1">
+
+        </button>
       </ul>
-     
+
     </div>
   </header>
   <main>
     <section class="fastfood">
-<div class="container">
-  <div class="fastfood__list">
-   <div>
-    <h1 class="fastfood__title">
-      super fast Food <br> 
-      delivery service
-    </h1>
-    <p class="fastfood__text">
-      We provide super fast-delivery service. Let's use our <br> services right now and get discounts of up to 50%
-    </p>
-    <button class="fastfood__btn">
-      Explore Food
-    </button>
-    <a class="fastfood__link" href="#">Download App</a>
-   </div>
-    <div class="fastfood__img">
-      <img src="./img/Mask Group (10).png" alt="">
-    </div>
-  </div>
- 
-</div>
+      <div class="container">
+        <div class="fastfood__list">
+          <div>
+            <h1 class="fastfood__title">
+              super fast Food <br>
+              delivery service
+            </h1>
+            <p class="fastfood__text">
+              We provide super fast-delivery service. Let's use our <br> services right now and get discounts of up to
+              50%
+            </p>
+            <button class="fastfood__btn">
+              Explore Food
+            </button>
+            <a class="fastfood__link" href="#">Download App</a>
+          </div>
+          <div class="fastfood__img">
+            <img src="./img/Mask Group (10).png" alt="">
+          </div>
+        </div>
+
+      </div>
     </section>
     <section class="our">
       <div class="container">
         <div class="our__title">
-          <h2 >
-            Our popular Category 
+          <h2>
+            Our popular Category
           </h2>
         </div>
         <ul class="our__list">
@@ -88,13 +91,103 @@ Contract
             sandwich
           </li>
           <li class="our__item">
-              <img src="./img/dish 1.png" alt="">
+            <img src="./img/dish 1.png" alt="">
             Set Menu
           </li>
 
         </ul>
       </div>
     </section>
+    <section class="runfood">
+      <div class="container">
+        <ul class="runfood__list">
+          <li class="runfood__item">
+            <div class="runfood__img">
+              <img src="./img/item_01-480x480 1 (1).png" alt="">
+            </div>
+            <div class="runfood__title">
+             <h4>
+              Beef Burger
+            <h5>
+              $18.00 
+            </h5>
+              <button class="runfood__btn">
+                Add to Cart
+              </button>
+            </div>
+          </li>
+
+          <li class="runfood__item">
+            <div class="runfood__img">
+              <img src="./img/item_01-480x480 1.png" alt="">
+            </div>
+            <div>
+            <h4>
+              Beef Burger
+            </h4>
+             <h5>
+              $15.00 
+             </h5>
+              <button class="runfood__btn">
+                Add to Cart
+              </button>
+            </div>
+          </li>
+
+          <li class="runfood__item">
+            <div class="runfood__img">
+              <img src="./img/item_01-480x480 1 (1).png" alt="">
+            </div>
+            <div>
+               <h4>
+                Beef Burger
+               </h4>
+              <h5>
+                $16.00
+              </h5>
+              <button class="runfood__btn">
+                Add to Cart
+              </button>
+            </div>
+          </li>
+
+          <li class="runfood__item">
+            <div class="runfood__img">
+              <img src="./img/item_01-480x480 1 (2).png" alt="">
+            </div>
+            <div>
+              <h4>
+                Beef Burger
+              </h4>
+             <h5>
+              $14.00
+             </h5>
+              <button class="runfood__btn">
+                Add to Cart
+              </button>
+            </div>
+          </li>
+
+          <li class="runfood__item">
+            <div class="runfood__img">
+              <img src="./img/item_01-480x480 1 (3).png" alt="">
+            </div>
+            <div>
+              <h4>
+                Chicken Burger
+              </h4>
+              <h5>
+                $15.00
+              </h5>
+              <button class="runfood__btn">
+                Add to Cart
+              </button>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
+
 </html>
