--- a/index.html
+++ b/index.html
@@ -187,6 +187,37 @@
         </ul>
       </div>
     </section>
+
+
+    <section class="help">
+      <div class="container">
+        <div class="help__list">
+          <div class="help__img">
+            <img src="./img/food delivery 4.png" alt="">
+          </div>
+          <div class="help__title">
+            <h2 class="help__title1">
+              Stay at home, we will <br> Provide good food
+            </h2>
+            <p class="help__text">
+              We provide tasty food and superfast delivery at your home.  Let's use our services right now and get discounts of up to 50%.
+            </p>
+            <h6 class="hel__link">
+              fasted delivery in 30 Minutes
+            </h6>
+            <h6 class="hel__link">
+              300+ delivery men
+            </h6>
+            <h6 class="hel__link">
+              500+ restaurant & cafe shop
+            </h6>
+            <button class="help__btn">
+              See more
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
